rust_writer_procedural/tests/ui/local_finder_fails_if_attr_not_lifetime.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer_procedural::local_finder;

#[local_finder(T)]
struct SomeStruct {}

fn main() {}
